use '--add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED' to avoid Java Module issues with TestFX and javafx.graphics